Ajustando as areas de atuaçao

--- a/index.html
+++ b/index.html
@@ -171,13 +171,21 @@
                                 <li>Indenizações.</li>
                                 <li>Responsabilidade Civil.</li>
                                 <li>Acompanhamento de contratos civis.</li>
-                                <li>Ajuizamento e defesa em ações de cobranças.</li>
+                                <li>Ajuizamento e defesa em ações.</li>
                             </ul>
                             </p>
-                            <!--<div class="text-center">
-                                <a href="#" class="btn btn-default">Mais atuações </a>
-                            </div>-->
-
+                            <div class="text-right">
+                                <img src="content/more.svg" class="btnmore" onclick="$('#direitocivil').dialog({title:'Direito Civil',width:550});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="direitocivil" style="display: none;">
+                            <ul class="listservicos">
+                                <li>Indenizações.</li>
+                                <li>Responsabilidade Civil.</li>
+                                <li>Acompanhamento de contratos civis.</li>
+                                <li>Ajuizamento e defesa em ações de cobranças.</li>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -197,8 +205,8 @@
                             </ul>
                             </p>
 
-                       <div class="text-right">
-                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitotrabalhista').dialog({title:'Direito Previdenciário',width:550});" title="Mais atuações..." >
+                            <div class="text-right">
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitotrabalhista').dialog({title:'Direito do Trabalho',width:550});" title="Mais atuações..." >
                             </div>
                         </div>
                         <div id="direitotrabalhista" style="display: none;">
@@ -238,12 +246,20 @@
                                 <li>Limpeza SPC/SERASA E BOA VISTA</li>
                                 <li>Danos Morais.</li>
                                 <li>Empresas Aéreas – Abusos.</li>
-                                <li>Turismo e Hotéis.</li>
                             </ul>
                             </p>
-                            <!--<div class="text-center">
-                                <a href="#" class="btn btn-default">Mais atuações </a>
-                            </div>-->
+                            <div class="text-right">
+                                <img src="content/more.svg" class="btnmore" onclick="$('#direitoconsumidor').dialog({title:'Direito Consumidor',width:550});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="direitoconsumidor" style="display: none;">
+                            <ul class="listservicos">
+                                <li>Direito do Consumidor.</li>
+                                <li>Limpeza SPC/SERASA E BOA VISTA</li>
+                                <li>Danos Morais.</li>
+                                <li>Empresas Aéreas – Abusos.</li>
+                                <li>Turismo e Hotéis.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -265,8 +281,17 @@
                                 <li>Inventário Extrajudicial – Cartorário.</li>
                                 <li>Testamentos – Elaboração e Cumprimento.</li>
                             </ul>
-                            </p>
-
+                            <div class="text-right">
+                                <img src="content/more.svg" class="btnmore" onclick="$('#inventariotestamento').dialog({title:'Inventários e testamentos',width:550});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="inventariotestamento" style="display: none;">
+                            <ul class="listservicos">
+                                <li>Inventários.</li>
+                                <li>Inventário Judicial.</li>
+                                <li>Inventário Extrajudicial – Cartorário.</li>
+                                <li>Testamentos – Elaboração e Cumprimento.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -286,7 +311,7 @@
                             </ul>
                             </p>
                             <div class="text-right">
-                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitoprevidenciario').dialog({title:'Direito Previdenciário',width:350});" title="Mais atuações..." >
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitoprevidenciario').dialog({title:'Direito Previdenciário',width:550});" title="Mais atuações..." >
                             </div>
                         </div>
                         <div id="direitoprevidenciario" style="display: none;">
@@ -322,7 +347,7 @@
                             </ul>
                             </p>
                          <div class="text-right">
-                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitocriminal').dialog({title:'Direito Previdenciário',width:350});" title="Mais atuações..." >
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitocriminal').dialog({title:'Direito Criminal',width:550});" title="Mais atuações..." >
                             </div>
                         </div>
                         <div id="direitocriminal" style="display: none;">
@@ -366,7 +391,7 @@
                             </ul>
                             </p>
                              <div class="text-right">
-                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitofamilia').dialog({title:'Direito de Família',width:350});" title="Mais atuações..." >
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitofamilia').dialog({title:'Direito de Família',width:550});" title="Mais atuações..." >
                             </div>
                         </div>
                          <div id="direitofamilia" style="display: none;">
@@ -402,8 +427,17 @@
                                 <li>Trânsito e Transporte</li>
                                 <li>Seguro de Automóveis</li>
                             </ul>
-                            </p>
-
+                            <div class="text-right">
+                                <img src="content/more.svg" class="btnmore" onclick="$('#dpvattransporte').dialog({title:'DPVAT - Transportes',width:550});" title="Mais atuações..." >
+                            </div>
+                        </div>
+                        <div id="dpvattransporte" style="display: none;">
+                            <ul class="listservicos">
+                                <li>Seguros DPVAT</li>
+                                <li>Acidentes de Trânsito</li>
+                                <li>Trânsito e Transporte</li>
+                                <li>Seguro de Automóveis</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -423,7 +457,7 @@
                             </ul>
                             </p>
                          <div class="text-right">
-                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitoimobiliario').dialog({title:'Direito Previdenciário',width:350});" title="Mais atuações..." >
+                                  <img src="content/more.svg" class="btnmore" onclick="$('#direitoimobiliario').dialog({title:'Direito Imobiliário',width:550});" title="Mais atuações..." >
                             </div>
                         </div>
                         <div id="direitoimobiliario" style="display: none;">
