--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitotrabalhador.png" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitotrabalhador.jpg" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
             </div>
 
             <div class="item">
@@ -98,7 +98,7 @@
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitoconsumidor.png" alt="Previdência - Garanta uma aponsentadoria tranquila." />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/bannerdireitoconsumidor.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
             </div>
 
             <div class="item">
