--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
                                         <img class="img-circle" style="width:140px;" src="content/associado2.jpg" alt="Lorem ipsum" />
                                         <h3 class="labelAssociadoTitulo">Dr. Vicente de Paulo Leles</h3>
                                         <p class="textoAssociado" style="font-size: medium;">
-                                            Advogado formado pela Faculdade Batista de Minas Gerais. Pós-graduado em Direiro e Processo do Trabalho e Previdênciário.<br/>
-                                            Experiência em direto médico, direto contábil, licitações. Associado  a Santos Toledo Advogados.
+                                            Advogado formado pela Faculdade Batista de Minas Gerais. Pós-graduado em Direito e Processo do Trabalho e Previdênciário.<br/>
+                                            Experiência em direito médico, direito contábil, licitações. Associado  a Santos Toledo Advogados.
                                         </p>
                                     </div>
 
