--- a/index.html
+++ b/index.html
@@ -543,6 +543,21 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="item">
+                            <div class="col-sm-12">
+                                <div>
+                                    <div class="text-center">
+                                        <img class="img-circle" style="width:140px;" src="content/associado4.jpg" alt="Lorem ipsum" />
+                                        <h3 class="labelAssociadoTitulo">Dr. Vicente de Paulo Leles</h3>
+                                        <p class="textoAssociado" style="font-size: medium;">
+                                            Advogado formado pela Faculdade Batista de Minas Gerais. Pós-graduado em Direito e Processo do Trabalho e Previdênciário.<br/>
+                                            Experiência em direito médico, direito contábil, licitações. Associado  a Santos Toledo Advogados.
+                                        </p>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- Indicators -->
                     <ol class="carousel-indicators" style="margin-bottom: -50px;">
